@@ -1,7 +1,7 @@
 // $Id$
 // Communicate with separate GDB process
 
-// Copyright (C) 1995-1998 Technische Universitaet Braunschweig, Germany.
+// Copyright (C) 1995-1999 Technische Universitaet Braunschweig, Germany.
 // Written by Dorothea Luetkehaus <luetke@ips.cs.tu-bs.de>
 // and Andreas Zeller <zeller@ips.cs.tu-bs.de>.
 // 
@@ -629,8 +629,9 @@ bool GDBAgent::ends_with_prompt (const string& ans)
 	// Marc Lepage <mlepage@kingston.hummingbird.com> says that
 	// DBX on Solaris 2.5 has a prompt like `(dbx N) '.  We're
 	// liberal here and allow anything in the form `(NAME) ',
-	// where the first word in NAME must contain a `db'.
-	static regex rxprompt("[(][^ )]*db[^)]*[)] ");
+	// where the first word in NAME must contain a `db' or `deb'.
+	// (`deb' is there to support DEC's `ladebug')
+	static regex rxprompt("[(][^ )]*de?b[^)]*[)] ");
 #endif
 	if (possible_prompt.matches(rxprompt))
 	{
